# jor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: beads.jsonl  metadata.json
.claude/skills/connector-readme/: SKILL.md
.claude/workflows/: tdd.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.ralph/: RALPH.md  ralph.sh
docs/: go-to-market.md  parking-lot.md  testing-resume.md
docs/research/: session-formats-and-competitors.md
docs/superpowers/plans/: 2026-05-30-incremental-discovery.md
docs/superpowers/specs/: 2026-04-25-jor-mcp-phase1-design.md  2026-05-30-incremental-discovery-design.md
skill/: jor.md
src/jor/: __init__.py  cli.py  spinner.py
src/jor/claude_code/: connector.py  launcher.py  writer.py
src/jor/codex/: connector.py  launcher.py  writer.py
src/jor/connectors/: base.py
src/jor/core/: index.py  protocols.py  reader.py  scanner.py  schema.py
src/jor/discovery/: scanner.py
src/jor/launchers/: base.py  claude_code.py  codex.py
src/jor/session/: reader.py
tests/: conftest.py  test_claude_code_connector.py  test_claude_code_writer.py  test_cli.py  test_codex_connector.py  test_codex_writer.py  test_index.py  test_reader.py  test_scaffold.py  test_scanner.py  test_schema.py  test_schemas.py  test_spinner.py  test_writers.py
tests/connectors/claude/: test_connector.py  test_parser.py  test_writer.py
tests/core/: test_index.py  test_reader.py  test_scanner.py  test_schema.py
tests/fixtures/: claude_session.jsonl  codex_session.jsonl
tests/integration/: test_resume.py
(+26 files in other folders)
