[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjor"
version = "0.1.2"
description = "AI session discovery, conversion, and cross-tool continuation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jor Contributors" },
]
keywords = ["ai", "sessions", "claude", "codex", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/folusoogunlana/jor"
Repository = "https://github.com/folusoogunlana/jor"
Issues = "https://github.com/folusoogunlana/jor/issues"

[project.scripts]
jor = "jor.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    ".beads/",
    ".claude/",
    ".ralph/",
    ".github/",
    "docs/",
    "tests/",
    "skill/",
    "CLAUDE.md",
    "AGENTS.md",
    "RALPH.md",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8.0",
]
